new images and text

--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@
 													<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0; direction:ltr;">
 														<tr>
 															<td align="left" class="mo-text-center" style="color:#FFFFFF;font-family: 'Montserrat', sans-serif;font-size:35px;font-weight:700;letter-spacing:1px;line-height:42px;padding:0;padding-bottom:30px;">
-																Paysley is Perfect for Churches and Fundraisers
+																Perfect for Donations and Fundraisers
 															</td>
 														</tr>
 														<tr>
 															<td align="left" class="mo-text-center" style="color:#FFFFFF;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:35px;">
-																Get merchants setup today with the only contactless payment solution with no App to download and no registration required
+																Churches, nonprofits, event organizers, etc. start their digital campaign via text or social media and start <strong>collecting in seconds</strong>.
 															</td>
 														</tr>
 														<tr>
@@ -312,7 +312,7 @@
 																				<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
 																					<tr>
 																						<td align="center">
-																							<a href="https://paysley.com/contact" style="color: #ffffff; display: block; font-family: 'Montserrat', sans-serif;font-size:16px; font-weight:600;letter-spacing:1px;line-height:22px;padding:14px 30px 14px 30px; text-decoration: none; white-space:nowrap;">Get Started with Paysley</a>
+																							<a href="https://paysley.com/contact" style="color: #ffffff; display: block; font-family: 'Montserrat', sans-serif;font-size:16px; font-weight:600;letter-spacing:1px;line-height:22px;padding:14px 30px 14px 30px; text-decoration: none; white-space:nowrap;">Offer Paysley Today</a>
 																							</a>
 																						</td>
 																					</tr>
@@ -363,6 +363,42 @@
 </table>
 <!-- Hero BG : Left Text Close -->
 
+<!-- Footer  : Open -->
+<table border="0" cellspacing="0" cellpadding="0" align="center" width="100%" style="background-color:#F9F9F9;border:0;border-collapse:collapse;border-spacing:0;">
+	<tr>
+		<td align="center">
+			<table cellpadding="0" cellspacing="0" align="center" class="table-700" style="background-color:#F3F7FC;border:0;border-collapse:collapse;border-spacing:0;margin:0 auto;max-width:700px;width:700px;">
+				<tr>
+					<td data-resizable-height style="font-size:10px;height:10px;line-height:10px;">&nbsp;</td>
+				</tr>
+				<tr>
+					<td align="center" class="mo-px-25">
+						<table cellpadding="0" cellspacing="0" align="center" class="table-640" style="border:0;border-collapse:collapse;border-spacing:0;margin:0 auto;max-width:640px;width:640px;">
+							<tr>
+								<td align="center">
+									<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
+										<tr>
+											<td align="center" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:12px;font-weight:400;letter-spacing:1px;line-height:22px;">
+												<marquee>
+													Tithes &nbsp;&nbsp;&nbsp;Missions &nbsp;&nbsp;&nbsp;Charities &nbsp;&nbsp;&nbsp;Disaster Relief &nbsp;&nbsp;&nbsp;Nonprofits &nbsp;&nbsp;&nbsp;Churches &nbsp;&nbsp;&nbsp;Fundraising &nbsp;&nbsp;&nbsp;Exhibits &nbsp;&nbsp;&nbsp;Events &nbsp;&nbsp;&nbsp;Donations &nbsp;&nbsp;&nbsp;Offerings &nbsp;&nbsp;&nbsp;Foundations &nbsp;&nbsp;&nbsp;Holiday Fund &nbsp;&nbsp;&nbsp;Humanitarian Aid &nbsp;&nbsp;&nbsp;Food Pantry &nbsp;&nbsp;&nbsp;Tithes &nbsp;&nbsp;&nbsp;Missions &nbsp;&nbsp;&nbsp;Charities &nbsp;&nbsp;&nbsp;Disaster Relief &nbsp;&nbsp;&nbsp;Nonprofits &nbsp;&nbsp;&nbsp;Churches &nbsp;&nbsp;&nbsp;Fundraising &nbsp;&nbsp;&nbsp;Exhibits &nbsp;&nbsp;&nbsp;Events &nbsp;&nbsp;&nbsp;Donations &nbsp;&nbsp;&nbsp;Offerings &nbsp;&nbsp;&nbsp;Foundations &nbsp;&nbsp;&nbsp;Holiday Fund &nbsp;&nbsp;&nbsp;Humanitarian Aid &nbsp;&nbsp;&nbsp;Food Pantry &nbsp;&nbsp;&nbsp;Tithes &nbsp;&nbsp;&nbsp;Missions &nbsp;&nbsp;&nbsp;Charities &nbsp;&nbsp;&nbsp;Disaster Relief &nbsp;&nbsp;&nbsp;Nonprofits &nbsp;&nbsp;&nbsp;Churches &nbsp;&nbsp;&nbsp;Fundraising &nbsp;&nbsp;&nbsp;Exhibits &nbsp;&nbsp;&nbsp;Events &nbsp;&nbsp;&nbsp;Donations &nbsp;&nbsp;&nbsp;Offerings &nbsp;&nbsp;&nbsp;Foundations &nbsp;&nbsp;&nbsp;Holiday Fund &nbsp;&nbsp;&nbsp;Humanitarian Aid &nbsp;&nbsp;&nbsp;Food Pantry
+												</marquee>
+											</td>				
+										</tr>
+									</table>
+								</td>
+							</tr>
+						</table>
+					</td>
+				</tr>
+				<tr>
+					<td data-resizable-height style="font-size:10px;height:10px;line-height:10px;">&nbsp;</td>
+				</tr>
+			</table>
+		</td>
+	</tr>
+</table>
+<!-- Footer : Close -->
+
 <!-- Title : Sub Title : Open -->
 <table cellpadding="0" cellspacing="0" align="center" width="100%" style="background-color:#F9F9F9;border:0;border-collapse:collapse;border-spacing:0;margin:0 auto;max-width:100%;width:100%;">
 	<tr>
@@ -379,12 +415,12 @@
 									<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
 										<tr>
 											<td align="center" style="color:#000000;font-family: 'Montserrat', sans-serif;font-size:24px;font-weight:600;letter-spacing:1px;line-height:34px;padding:0;padding-bottom:10px;">
-												Introducing Paysley
+												Provide the Perfect Offering Experience
 											</td>
 										</tr>
 										<tr>
 											<td align="center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;">
-												The first and only payment stack that allows merchants to send single and recurring payments, utilize contactless QR-code, text, and email-to-pay capability, and manage campaigns from anywhere.
+												Do your merchants already have payment processing? Perfect! Linking Paysley to a current merchant account is seamless and takes less than 10 minutes to deploy. If not, no worries! Get them set up with one of our partnered providers right away.
 											</td>
 										</tr>
 									</table>
@@ -421,9 +457,7 @@
 										<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
 											<tr>
 												<td align="center">
-													<a href="http://paysley.com/" style="text-decoration:none;">
-														<img class="mo-img-full" src="images/about-invoicing-2.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
-													</a>
+														<img class="mo-img-full" src="images/donation-campaign.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
 												</td>
 											</tr>
 										</table>
@@ -441,12 +475,25 @@
 										<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#000000;font-family: 'Montserrat', sans-serif;font-size:24px;font-weight:600;letter-spacing:1px;line-height:34px;padding:0;padding-bottom:20px;">
-													Invoice on the Spot
+													Create a Campaign
 												</td>
 											</tr>
 											<tr>
-												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:40px;">
-													Send a payment request instantly to your customer's phone or email.<br><br>Add your logo, colors, and personality to your template for a professional feel.
+												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:20px;">
+													It takes just seconds to send out the first campaign, notify customers, and begin collecting.
+												</td>
+											</tr>
+											<tr>
+												<td align="center">
+													<table cellpadding="0" cellspacing="0" align="left" class="mo-center" style="border:0;border-collapse:collapse;border-spacing:0;">
+														<tr>
+															<td align="center" style="background-color:#43B8AA;display:block;border-radius: 25px;border:1px solid #43B8AA;">
+																<a href="https://pay.paysley.com/pos_link/bZ1-r_QklUKMUJrxj_jpqV0Z2t" style="color:#ffffff;display:block;font-family: 'Montserrat', sans-serif;font-size:14px;font-weight:600;letter-spacing:1px;line-height:22px;padding:5px 20px 5px 20px;text-decoration:none;white-space:nowrap;">
+																	Payment Page Demo
+																</a>
+															</td>
+														</tr>
+													</table>
 												</td>
 											</tr>
 											<tr>
@@ -498,7 +545,7 @@
 											<tr>
 												<td align="center">
 													<a href="http://paysley.com/" style="text-decoration:none;">
-														<img class="mo-img-full" src="images/scan-pay.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
+														<img class="mo-img-full" src="images/qr-pamphlet.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
 													</a>
 												</td>
 											</tr>
@@ -514,28 +561,15 @@
 									</div>
 									<!--[if (gte mso 9)|(IE)]></td><td width="305" valign="middle"><![endif]-->
 									<div class="row" style="display:inline-block;max-width:305px;vertical-align:middle;width:100%;">
-										<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
+										<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;direction: ltr;">
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#000000;font-family: 'Montserrat', sans-serif;font-size:24px;font-weight:600;letter-spacing:1px;line-height:34px;padding:0;padding-bottom:20px;">
-													Customers Scan & Pay
+													Enable QR Codes
 												</td>
 											</tr>
 											<tr>
-												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:20px; direction: ltr;">
-													Use unique QR codes in print, online, or via social media for quicker, contactless payments.
-												</td>
-											</tr>
-											<tr>
-												<td align="center">
-													<table cellpadding="0" cellspacing="0" align="left" class="mo-center" style="border:0;border-collapse:collapse;border-spacing:0;">
-														<tr>
-															<td align="center" style="background-color:#43B8AA;display:block;border-radius: 25px;border:1px solid #43B8AA;">
-																<a href="https://pay.paysley.com/pos_link/bZ1-r_QklUKMUJrxj_jpqV0Z2t" style="color:#ffffff;display:block;font-family: 'Montserrat', sans-serif;font-size:14px;font-weight:600;letter-spacing:1px;line-height:22px;padding:5px 20px 5px 20px;text-decoration:none;white-space:nowrap;">
-																	Try a Demo
-																</a>
-															</td>
-														</tr>
-													</table>
+												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:20px;">
+													Display custom QR codes in print or online to reach customers instantly.<br><br>Print on bulletins, posters, and t-shirts or send the code directly to customers' phone, email, and social media platform!
 												</td>
 											</tr>
 										</tr>
@@ -575,7 +609,7 @@
 											<tr>
 												<td align="center">
 													<a href="http://paysley.com/" style="text-decoration:none;">
-														<img class="mo-img-full" src="images/verify-payments.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
+														<img class="mo-img-full" src="images/reporting.png" alt="#" width="305" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:305px;">
 													</a>
 												</td>
 											</tr>
@@ -594,12 +628,12 @@
 										<table cellpadding="0" cellspacing="0" align="center" width="100%" style="border:0;border-collapse:collapse;border-spacing:0;">
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#000000;font-family: 'Montserrat', sans-serif;font-size:24px;font-weight:600;letter-spacing:1px;line-height:34px;padding:0;padding-bottom:20px;">
-													Verify Payments
+													Utilize Reporting
 												</td>
 											</tr>
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:40px;">
-													Scan your customer's confirmation code to confirm that funds were transferred to your account in real time.
+													Real-time donation information, member status, and campaign reports help make informed financial decisions.
 												</td>
 											</tr>
 										</table>
