--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 														<tr>
 															<td align="center">
 																<a href="https://paysley.com/" style="text-decoration:none;">
-																	<img class="mo-img-full" src="./images/mobile-animation.gif" alt="#" width="250" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:250px;">
+																	<img class="mo-img-full" src="./images/donation-animation.gif" alt="#" width="250" style="-ms-interpolation-mode:bicubic;display:block;height:auto;outline:none;text-decoration:none;width:250px;">
 																</a>
 															</td>
 														</tr>
@@ -291,7 +291,7 @@
 														</tr>
 														<tr>
 															<td align="left" class="mo-text-center" style="color:#FFFFFF;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:35px;">
-																Churches, nonprofits, event organizers, etc. start their digital campaign via text or social media and start <strong>collecting in seconds</strong>.
+																Begin a digital campaign via text, email, or social media and <strong>start collecting in seconds</strong>. Perfect for churches, nonprofits, event organizers, and more!
 															</td>
 														</tr>
 														<tr>
@@ -420,7 +420,7 @@
 										</tr>
 										<tr>
 											<td align="center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;">
-												Do your merchants already have payment processing? Perfect! Linking Paysley to a current merchant account is seamless and takes less than 10 minutes to deploy. If not, no worries! Get them set up with one of our partnered providers right away.
+												Are your merchants already processing? Perfect! Linking Paysley to a current merchant account is seamless and takes less than 10 minutes to deploy. If not, no worries! Get them set up with one of our partnered providers right away.
 											</td>
 										</tr>
 									</table>
@@ -569,7 +569,7 @@
 											</tr>
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:20px;">
-													Display custom QR codes in print or online to reach customers instantly.<br><br>Print on bulletins, posters, and t-shirts or send the code directly to customers' phone, email, and social media platform!
+													Display custom QR codes in print or online to reach customers instantly.<br><br>Print on bulletins, posters, and t-shirts or send a code directly to customers' phones, emails, and social media feeds!
 												</td>
 											</tr>
 										</tr>
@@ -633,7 +633,7 @@
 											</tr>
 											<tr>
 												<td align="left" class="mo-text-center" style="color:#939393;font-family: 'Open Sans', sans-serif;font-size:14px;font-weight:400;letter-spacing:1px;line-height:22px;padding:0;padding-bottom:40px;">
-													Real-time donation information, member status, and campaign reports help make informed financial decisions.
+													Real-time donation information, member status, and campaign reports help merchants make informed financial decisions.
 												</td>
 											</tr>
 										</table>
